Schedule on station added
